# goit-ds-hw-03

cats_db/: pyproject.toml
cats_db/src/cats_db/: main.py
quotes_and_authors/: pyproject.toml
quotes_and_authors/src/quotes_and_authors/: quotes_and_authors.py
