[project]
name = "quotes-and-authors"
version = "0.1.0"
description = ""
authors = [
    {name = "Volodymyr Meleshchenko",email = "vovchik357@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.17.0,<5.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "lxml (>=6.1.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "quotes_and_authors", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
